--- a/src/stylesheets/_mixin.scss
+++ b/src/stylesheets/_mixin.scss
@@ -1,4 +1,4 @@
-//border raduis:
+//border radius:
 @mixin borderRadius($value){
     border-radius:         $value;
     -webkit-border-radius: $value;
