--- a/src/components/SelectInput/SelectInput.scss
+++ b/src/components/SelectInput/SelectInput.scss
@@ -11,8 +11,10 @@
         display: block;
     }
     > div{
-        display: flex;
         margin-top: 20px;
+        display: flex;
+        align-items: center;
+        gap: 10px;
         > .selectWrapper{
             background-color: #f5f5f5;
             @include borderRadius(7px);
@@ -35,8 +37,6 @@
         > .comment{
             font-size: 1.5rem;
             color: #aaa;
-            margin-left: 10px;
-            margin-top: 15px;
         }
     }
 }
