--- a/src/components/Info/Info.scss
+++ b/src/components/Info/Info.scss
@@ -3,71 +3,111 @@
 
 .Info{
     width: 100%;
-    > .costs{
-        > .title{
-            margin: 0;
-            font-size: 1.6rem;
-            font-weight: normal;
-            color: #aaa;
-            > .benefits{
-                color: #292;
-                font-weight: bold;
-                margin-right: 1px;
+    height: 100%;
+    box-shadow: 3px 10px 35px #DDD;
+    @include borderRadius(20px);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    > .container{
+        width: 100%;
+        max-width: 470px;
+        height: 100%;
+        max-height: 630px;
+        padding: 45px;
+        overflow: auto;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+
+        //title:
+        > .titleWrapper{
+            display: flex;
+            gap: 5px;
+            > .smallText{
+                display: flex;
+                gap: 4px;
+                > .your,
+                > .ownership{
+                    font-size: 1.6rem;
+                    font-weight: normal;
+                    color: #aaa;
+                }
+                > .ownership{
+                    display: none;
+                }
+            }
+            > .bigText{
+                display: flex;
+                gap: 4px;
+                > .costs,
+                > .willBe{
+                    font-size: 1.6rem;
+                    font-weight: normal;
+                    color: #aaa;
+                }
+                > .benefits{
+                    color: #292;
+                    font-weight: bold;
+                    margin-right: 1px;
+                }
             }
         }
-        > .distanceWrapper{
+
+        //per distance:
+        > .perDistanceWrapper{
+            width: fit-content;
             display: flex;
-            margin-top: 20px;
+            gap: 12px;
             > .unit{
                 font-size: 3rem;
-                color: #04b;
-                margin-top: 12px;
                 font-weight: bold;
+                color: #04b;
+                margin-top: 15px;
             }
-            > .ammount{
-                font-size: 10.5rem;
+            > .amount{
+                font-size: 12rem;
                 line-height: 100%;
                 letter-spacing: 0.1rem;
                 color: #04b;
-                margin-left: 12px;
-                @extend .threeDotsOverflow;
             }
             > .period{
                 font-size: 1.6rem;
                 white-space: nowrap;
                 color: #aaa;
-                margin-left: 17px;
-                margin-top: 75px;
+                align-self: flex-end;
+                margin-bottom: 15px;
             }
         }
-        > .timeWrapper{
+
+        //per time:
+        > .perTimeWrapper{
             width: fit-content;
             max-width: 100%;
             min-width: 305px;
-            overflow: auto;
-            margin-top: 40px;
+            height: fit-content;
             display: flex;
             justify-content: space-between;
             gap: 15px;
-            padding-bottom: 5px;
+            padding-bottom: 25px;
             > .timeCostWrapper{
                 > .period{
                     font-size: 1.45rem;
                     color: #aaa;
                     display: block;
                 }
-                > .ammountWrapper{
+                > .amountWrapper{
                     margin-top: 5px;
                     display: flex;
                     > a{
                         font-weight: bold;
-                        color: #666;
+                        color: #555;
                         display: block;
                     }
                     > .currency{
                         font-size: 2.2rem;
                     }
-                    > .ammount{
+                    > .amount{
                         margin-left: 1px;
                         font-size: 2.2rem;
                         @extend .threeDotsOverflow;
@@ -77,10 +117,3 @@
         }
     }
 }
-
-// //responsive design:
-// @media only screen and (max-height: 900px){
-//     .Info{
-        
-//     }
-// }
